--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     </div>
     <div class="header-actions">
       <button id="themeToggle" class="ghost-btn">🌙 / ☀</button>
-      <a href="https://change.org/p/pass-the-ddfa-data-distribution-fairness-act" target="_blank" rel="noopener" class="primary-btn">Sign the Petition</a>
+      <p class="donation-disclaimer">
+    <strong>Note:</strong> Signing is completely <strong>free</strong>. 
+    After signing, Change.org may ask for an optional donation — 
+    this goes to their platform, <strong>not</strong> the DDFA. 
+    You can simply close the page; your signature will already be counted.
+</p>
+     <a href="https://change.org/p/pass-the-ddfa-data-distribution-fairness-act" target="_blank" rel="noopener" class="primary-btn">Sign the Petition</a>
     </div>
   </header>
 
